# kriging-gui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
src/: main.py
src/config/: config.py  kriging.py
src/entity/: kriging.py  point.py  states.py
src/gui/: buttons.py  main_window.py  process.py  render.py
src/service/: kriging.py
